peac_dev/force-app/main/default/objects/Trigger_Action__mdt/fields/Is_After__c.field-meta.xml
<CustomField>
    <fullName>Is_After__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is After?</label>
    <type>Checkbox</type>
</CustomField>