peac_dev/force-app/main/default/objects/Trigger_Action__mdt/fields/Is_Before__c.field-meta.xml
<CustomField>
    <fullName>Is_Before__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Before?</label>
    <type>Checkbox</type>
</CustomField>