peac_dev/force-app/main/default/objects/Trigger_Action__mdt/fields/Is_Insert__c.field-meta.xml
<CustomField>
    <fullName>Is_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Insert?</label>
    <type>Checkbox</type>
</CustomField>