peac_dev/force-app/main/default/objects/Trigger_Action__mdt/fields/Is_Update__c.field-meta.xml
<CustomField>
    <fullName>Is_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Update?</label>
    <type>Checkbox</type>
</CustomField>