peac_dev/force-app/main/default/objects/Trigger_Action__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_After__c</columns>
    <columns>Is_Before__c</columns>
    <columns>Is_Delete__c</columns>
    <columns>Is_Insert__c</columns>
    <columns>Is_Update__c</columns>
    <columns>Order__c</columns>
    <columns>Sobject_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>